--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         Throughout my childhood I've struggled with verbal communication,
                         but after I learned to communicate with others digitally,
                         it became my personal mission to help others express themselves online.
-                        As a result, I frequently use and try out different digital tools to find multiple ways to create.
-                        My recent interests include modeling and rigging for both 2D and 3D animation, and game development.
+                        As a result, I frequently use and experiment with various digital tools to find multiple ways to create.
+                        My recent interests include modeling and rigging for both 2D and 3D animation, as well as game development.
                     </p>
                 </div>
             </section>
